2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.10.1.

==================== 2.10.0 ====================

2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.10.0.

2005-03-04  Mark McLoughlin  <mark@skynet.ie>

	Fix from Jeremy Katz <katzj@redhat.com> for bug #169200

	* libmenu/desktop-entries.c (get_categories_from_key_file):
	sizeof(int) != sizeof(gsize).

2005-03-06  Dafydd Harries  <daf@muse.19inch.net>

	* configure.in: Added "cy" to ALL_LINGUAS.

2005-03-02  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ca" "fi" "mk" "nn" "tr" "vi" "zh_TW" to ALL_LINGUAS.

2005-03-02  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added "fa" (Persian) to ALL_LINGUAS.

2005-03-01  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.10.0

==================== 2.9.92 ====================

2005-03-01  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.9.92.

2005-03-01  Dan Damian  <dand@gnome.ro>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS.

2005-02-27  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2005-02-27  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* id.po: Added id (Indonesian) in ALL_LINGUAS line.

2005-02-24  Ankit Patel <ankit644@yahoo.com>

	* configure.in: Added gu "Gujarati" in ALL_LINGUAS.

2005-02-22  Arafat Medini  <kinryu@silverpen.de>

	* configure.in: Added Arabic locale to ALL_LINGUAS.
	
2005-02-18  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/entry-directories.c:
	(cached_dir_invoke_monitors): split out from
	handle_cached_dir_changed() and invoke monitors on
	ancestors too. Fixes bug #167759.
	(handle_cached_dir_changed): upd.

	* util/test-menu-spec.c: add a --monitor option
	to test monitoring.

2005-02-18  Mark McLoughlin  <mark@skynet.ie>

	Fix bug with the <Not> directive - bug #167758.
	Thanks to Chris Lahey for the test case.
